[package]
name = "github-app"
version = "0.0.1"
authors = ["Dennis Sivia <dennis.sivia@gmail.com>"]
edition = "2018"

[dependencies]
gotham = "0.4.0"
hyper = "0.12"
mime = "0.3"
# Replace with hmac<SHA1>
#hmac-sha1 = "0.1.3"
openssl = "0.10.24"
hex = "0.3.2"
futures = "0.1"
octokit = { path = "../octokit" }
